--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-svg": "^15.4.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
